@@ -1,3 +1,9 @@
+2010-01-07  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_path_manage.h: Change the return value from size_t to int, since size_t is unsigned but we need to return -1
+
+	* src/ol_main.c (for_each_lrc_pattern): FIX: issue 39, the pattern expanding failure is ignored due to type casting.
+
 2010-01-06  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_player_xmms2.c: ADD: XMMS2 support
